--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="com.example.j_rus.flipnlearn_v2.LoginActivity">
+    tools:context="com.example.j_rus.flipnlearn_v2.app.LoginActivity">
 
     <LinearLayout
         android:layout_width="fill_parent"
@@ -65,7 +65,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:background="@color/colorAccent"
-            android:text="@string/action_sign_in_short"
+            android:text="@string/action_sign_up_short"
             android:textColor="@android:color/black"
             android:textStyle="bold" />
 
