Half way through with the login screen, users can now login and go to the main activity, they also login from the main activity as well as log out. The main activity now features three buttons to create a deck of cards, view existing cards and view cards they have built once logged into the app.

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -16,6 +16,16 @@
         android:padding="@dimen/activity_horizontal_margin">
 
 
+        <ImageButton
+            android:id="@+id/btn_close_login"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:srcCompat="@android:drawable/ic_menu_close_clear_cancel"
+            android:layout_gravity="left"
+            android:elevation="0dp"
+            android:backgroundTint="@color/colorPrimary"
+            android:background="@android:drawable/btn_dialog" />
+
         <ImageView
             android:layout_width="@dimen/logo_w_h"
             android:layout_height="@dimen/logo_w_h"
