--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -77,7 +77,7 @@
             android:layout_width="fill_parent"
             android:layout_height="50dp"
             android:layout_marginTop="10dip"
-            android:background="@color/btn_login_bg"
+            android:background="@color/btn_bg"
             android:text="@string/btn_login"
             android:textColor="@android:color/black" />
 
@@ -92,7 +92,7 @@
             <com.google.android.gms.common.SignInButton
                 android:id="@+id/btn_google_login"
                 android:layout_width="150dp"
-                android:layout_height="35dp"
+                android:layout_height="34dp"
                 />
 
             <com.facebook.login.widget.LoginButton
