--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -80,6 +80,12 @@
             android:background="@color/btn_bg"
             android:text="@string/btn_login"
             android:textColor="@android:color/black" />
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/sign_in_error_msg"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dip"
+            android:textAlignment="center"/>
 
         <LinearLayout
             android:layout_width="fill_parent"
