--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -77,9 +77,9 @@
             android:id="@+id/sign_up_error_msg"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="5dip">
+            android:layout_marginTop="10dip"
+            android:textAlignment="center"/>
 
-        </android.support.design.widget.TextInputLayout>
         <Button
             android:id="@+id/btn_reset_password"
             android:layout_width="fill_parent"
