Continued to work on the login part of the app, started work on the password resest activity, the main activity now displays the user name of the logged in user.

--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -16,6 +16,17 @@
     tools:showIn="@layout/activity_main">
 
     <TextView
+        android:id="@+id/welcome_user_msg"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:textAlignment="center"
+        android:gravity="center_vertical"
+        android:textSize="30dp"
+        android:layout_marginBottom="70dp"
+        />
+
+    <TextView
         android:id="@+id/welcome_Msg"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
