--- a/app/src/main/res/layout/activity_reset_password.xml
+++ b/app/src/main/res/layout/activity_reset_password.xml
@@ -45,6 +45,7 @@
             android:textSize="14dp" />
 
         <android.support.design.widget.TextInputLayout
+            android:id="@+id/input_layout_reset_email"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
@@ -67,7 +68,7 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dip"
-            android:background="@color/colorAccent"
+            android:background="@color/btn_bg"
             android:text="@string/btn_reset_password"
             android:textColor="@android:color/black" />
 
