--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="colorPrimary">#03a9f4</color>
     <color name="colorPrimaryDark">#00A3ED</color>
-    <color name="colorAccent">#f9f9fafc</color>
+    <color name="colorAccent">#ff6861</color>
 
     <color name="bg_login">#26ae90</color>
     <color name="bg_register">#2e3237</color>
