--- a/app/src/main/res/layout/fragment_account_settings.xml
+++ b/app/src/main/res/layout/fragment_account_settings.xml
@@ -7,14 +7,50 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin">
 
-    <EditText
-        android:id="@+id/old_email"
+    <TextView
+        android:id="@+id/old_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:hint="@string/hint_name"
+        android:maxLines="1"
+        android:textAlignment="center"
+        android:textColor="@color/colorPrimary"
+        android:textSize="18sp" />
+    <android.support.design.widget.TextInputLayout
+        android:id="@+id/input_layout_new_name"
         android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <EditText
+            android:id="@+id/new_name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/hint_new_name"
+            android:inputType="text"
+            android:maxLines="1" />
+    </android.support.design.widget.TextInputLayout>
+
+    <android.support.design.widget.TextInputLayout
+        android:id="@+id/input_layout_password"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <EditText
+            android:id="@+id/password_for_new_name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/hint_password"
+            android:inputType="textPassword"
+            android:maxLines="1" />
+    </android.support.design.widget.TextInputLayout>
+
+    <TextView
+        android:id="@+id/old_email"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:hint="@string/hint_email"
-        android:inputType="textEmailAddress"
         android:maxLines="1"
-        android:singleLine="true" />
+        android:textAlignment="center"
+        android:textColor="@color/colorPrimary"
+        android:textSize="18sp" />
     <android.support.design.widget.TextInputLayout
         android:id="@+id/input_layout_new_email"
         android:layout_width="match_parent"
@@ -25,9 +61,9 @@
             android:layout_height="wrap_content"
             android:hint="@string/hint_new_email"
             android:inputType="textEmailAddress"
-            android:maxLines="1"
-            android:singleLine="true" />
+            android:maxLines="1" />
     </android.support.design.widget.TextInputLayout>
+
 
     <EditText
         android:id="@+id/password"
@@ -56,6 +92,22 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
+        <Button
+            android:id="@+id/changeName"
+            style="?android:textAppearanceSmall"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:background="@color/colorPrimaryDark"
+            android:text="@string/btn_change"
+            android:textColor="@android:color/white"
+            android:textStyle="bold" />
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/auth_error_msg"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dip"
+            android:textAlignment="center"/>
         <Button
             android:id="@+id/changeEmail"
             style="?android:textAppearanceSmall"
@@ -120,11 +172,21 @@
     </LinearLayout>
 
     <Button
+        android:id="@+id/change_name_button"
+        style="?android:textAppearanceSmall"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:background="@color/colorAccent"
+        android:text="@string/change_name"
+        android:textStyle="bold" />
+    <Button
         android:id="@+id/change_email_button"
         style="?android:textAppearanceSmall"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
+        android:background="@color/colorAccent"
         android:text="@string/change_email"
         android:textStyle="bold" />
 
@@ -134,6 +196,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
+        android:background="@color/colorAccent"
         android:text="@string/change_password"
         android:textStyle="bold" />
 
@@ -143,6 +206,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
+        android:background="@color/colorAccent"
         android:text="@string/send_password_reset_email"
         android:textStyle="bold" />
 
@@ -152,6 +216,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
+        android:background="@color/colorAccent"
         android:text="@string/remove_user"
         android:textStyle="bold" />
 
